Basic project structure, pom, startup script and foundation for Payment Hub