@@ -3,29 +3,22 @@
 ## Repository Structure
 
 ```
-tms/                                    # Gradle monorepo root
-├── settings.gradle.kts                 # all subprojects registered here
-├── build.gradle.kts                    # root conventions applied to all modules
-├── gradle/
-│   ├── libs.versions.toml              # single version catalog
-│   └── conventions/                    # convention plugins (shared build logic)
-│       ├── java-library.gradle.kts
-│       ├── spring-service.gradle.kts
-│       └── avro-codegen.gradle.kts
+tms/                                    # Maven multi-module root
+├── pom.xml                             # root POM: versions, pluginManagement, profiles
 │
 ├── tms-events-schema/                  # Avro schemas + generated Java classes
-├── tms-common-audit/                   # Audit logging cross-cutting library
-├── tms-common-outbox/                  # Transactional outbox + Debezium CDC
-├── tms-common-idempotency/             # Idempotency-Key dedup (Redis-backed)
-├── tms-common-security/                # JWT extraction, RBAC/ABAC helpers
-├── tms-common-money/                   # MonetaryAmount wrappers, JSR-354 config
-├── tms-common-validation/              # Shared Bean Validation annotations
-├── tms-common-messaging/               # Kafka/RabbitMQ template wrappers
-├── tms-common-test/                    # Testcontainers base, fixtures, fakes
+├── tms-common-audit/
+├── tms-common-outbox/
+├── tms-common-idempotency/
+├── tms-common-security/
+├── tms-common-money/
+├── tms-common-validation/
+├── tms-common-messaging/
+├── tms-common-test/
 │
-├── tms-gateway/                        # Spring Cloud Gateway
-├── tms-config-server/                  # Spring Cloud Config Server
-├── tms-bff/                            # Backend For Frontend
+├── tms-gateway/
+├── tms-config-server/
+├── tms-bff/
 ├── tms-payment-hub/
 ├── tms-trade/
 ├── tms-settlement/
@@ -45,129 +38,410 @@ tms/                                    # Gradle monorepo root
 ├── tms-rules-engine/
 ├── tms-notifications/
 │
-└── tms-ui/                             # React SPA (separate Vite build, not Gradle)
+└── tms-ui/                             # Angular SPA — built via frontend-maven-plugin
     ├── package.json
-    ├── vite.config.ts
+    ├── angular.json
+    ├── tsconfig.json
     └── src/
 ```
 
 ---
 
-## Gradle Configuration
+## Maven Configuration
 
-### `settings.gradle.kts` (excerpt)
-```kotlin
-rootProject.name = "tms"
+### Root `pom.xml`
 
-// Shared libraries
-include(
-    "tms-events-schema",
-    "tms-common-audit",
-    "tms-common-outbox",
-    "tms-common-idempotency",
-    "tms-common-security",
-    "tms-common-money",
-    "tms-common-validation",
-    "tms-common-messaging",
-    "tms-common-test",
-)
+```xml
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.tms</groupId>
+  <artifactId>tms-parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-// Infrastructure services
-include("tms-gateway", "tms-config-server", "tms-bff")
+  <modules>
+    <!-- Shared libraries — must be first (services depend on them) -->
+    <module>tms-events-schema</module>
+    <module>tms-common-audit</module>
+    <module>tms-common-outbox</module>
+    <module>tms-common-idempotency</module>
+    <module>tms-common-security</module>
+    <module>tms-common-money</module>
+    <module>tms-common-validation</module>
+    <module>tms-common-messaging</module>
+    <module>tms-common-test</module>
+    <!-- Infrastructure services -->
+    <module>tms-gateway</module>
+    <module>tms-config-server</module>
+    <module>tms-bff</module>
+    <!-- Domain services -->
+    <module>tms-payment-hub</module>
+    <module>tms-trade</module>
+    <module>tms-settlement</module>
+    <module>tms-cash-ecf</module>
+    <module>tms-cash-bat</module>
+    <module>tms-cash-position</module>
+    <module>tms-accounting</module>
+    <module>tms-risk</module>
+    <module>tms-fx-rates</module>
+    <module>tms-ihb</module>
+    <module>tms-liquidity</module>
+    <module>tms-reconciliation</module>
+    <module>tms-bank-accounts</module>
+    <module>tms-reference-data</module>
+    <module>tms-compliance</module>
+    <module>tms-confirmation-matching</module>
+    <module>tms-rules-engine</module>
+    <module>tms-notifications</module>
+    <!-- Frontend -->
+    <module>tms-ui</module>
+  </modules>
 
-// Domain services
-include(
-    "tms-payment-hub", "tms-trade", "tms-settlement",
-    "tms-cash-ecf", "tms-cash-bat", "tms-cash-position",
-    "tms-accounting", "tms-risk", "tms-fx-rates",
-    "tms-ihb", "tms-liquidity", "tms-reconciliation",
-    "tms-bank-accounts", "tms-reference-data", "tms-compliance",
-    "tms-confirmation-matching", "tms-rules-engine", "tms-notifications",
-)
+  <properties>
+    <java.version>21</java.version>
+    <spring-boot.version>4.0.0</spring-boot.version>
+    <spring-cloud.version>2025.0.0</spring-cloud.version>
+    <spring-kafka.version>4.0.0</spring-kafka.version>
+    <spring-amqp.version>4.0.0</spring-amqp.version>
+    <avro.version>1.12.0</avro.version>
+    <confluent.version>7.8.0</confluent.version>
+    <moneta.version>1.4.4</moneta.version>
+    <testcontainers.version>1.20.0</testcontainers.version>
+    <gatling.version>3.12.0</gatling.version>
+    <grpc.version>1.68.0</grpc.version>
+    <mapstruct.version>1.6.0</mapstruct.version>
+    <archunit.version>1.3.0</archunit.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- Shared library versions -->
+      <dependency>
+        <groupId>com.tms</groupId>
+        <artifactId>tms-events-schema</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.tms</groupId>
+        <artifactId>tms-common-audit</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <!-- ... repeat for all tms-common-* -->
+      <dependency>
+        <groupId>org.javamoney</groupId>
+        <artifactId>moneta</artifactId>
+        <version>${moneta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro</artifactId>
+        <version>${avro.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.confluent</groupId>
+        <artifactId>kafka-avro-serializer</artifactId>
+        <version>${confluent.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.tngtech.archunit</groupId>
+        <artifactId>archunit-junit5</artifactId>
+        <version>${archunit.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+          <configuration>
+            <release>21</release>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot.version}</version>
+          <executions>
+            <execution>
+              <goals><goal>repackage</goal></goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>jib-maven-plugin</artifactId>
+          <version>3.4.3</version>
+          <configuration>
+            <from>
+              <image>eclipse-temurin:21-jre-alpine</image>
+            </from>
+            <to>
+              <image>ghcr.io/org/tms/${project.artifactId}:${project.version}</image>
+            </to>
+            <container>
+              <jvmFlags>
+                <jvmFlag>-XX:+UseZGC</jvmFlag>
+                <jvmFlag>-XX:+ZGenerational</jvmFlag>
+                <jvmFlag>--enable-preview</jvmFlag>
+              </jvmFlags>
+              <ports><port>8080</port><port>8081</port></ports>
+            </container>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>avro-maven-plugin</artifactId>
+          <version>${avro.version}</version>
+          <executions>
+            <execution>
+              <phase>generate-sources</phase>
+              <goals><goal>schema</goal></goals>
+              <configuration>
+                <sourceDirectory>${project.basedir}/src/main/avro</sourceDirectory>
+                <outputDirectory>${project.build.directory}/generated-sources/avro</outputDirectory>
+                <createSetters>false</createSetters>   <!-- immutable records -->
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.12</version>
+          <executions>
+            <execution>
+              <goals><goal>prepare-agent</goal></goals>
+            </execution>
+            <execution>
+              <id>report</id>
+              <phase>verify</phase>
+              <goals><goal>report</goal></goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.flywaydb</groupId>
+          <artifactId>flyway-maven-plugin</artifactId>
+          <version>10.0.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+</project>
 ```
 
-### Version Catalog — `gradle/libs.versions.toml` (key entries)
-```toml
-[versions]
-java                    = "21"
-spring-boot             = "4.0.0"
-spring-cloud            = "2025.0.0"
-spring-kafka            = "4.0.0"
-spring-amqp             = "4.0.0"
-spring-security         = "7.0.0"
-hibernate               = "7.0.0"
-flyway                  = "10.0.0"
-kafka                   = "3.8.0"
-avro                    = "1.12.0"
-confluent-sr            = "7.8.0"
-moneta                  = "1.4.4"
-jackson                 = "2.18.0"
-grpc                    = "1.68.0"
-testcontainers          = "1.20.0"
-gatling                 = "3.12.0"
-wiremock                = "3.9.0"
-toxiproxy               = "2.1.7"
-jib                     = "3.4.3"
+### Service Module `pom.xml` (template — every deployable service)
 
-[libraries]
-spring-boot-starter-web     = { module = "org.springframework.boot:spring-boot-starter-web" }
-spring-boot-starter-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa" }
-spring-kafka                = { module = "org.springframework.kafka:spring-kafka" }
-spring-amqp                 = { module = "org.springframework.amqp:spring-rabbit" }
-moneta                      = { module = "org.javamoney:moneta", version.ref = "moneta" }
-avro                        = { module = "org.apache.avro:avro", version.ref = "avro" }
-confluent-avro-serializer   = { module = "io.confluent:kafka-avro-serializer", version.ref = "confluent-sr" }
-testcontainers-postgresql   = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
-testcontainers-kafka        = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
-testcontainers-rabbitmq     = { module = "org.testcontainers:rabbitmq", version.ref = "testcontainers" }
+```xml
+<project>
+  <parent>
+    <groupId>com.tms</groupId>
+    <artifactId>tms-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>tms-payment-hub</artifactId>
+  <packaging>jar</packaging>
+
+  <dependencies>
+    <!-- Spring Boot -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+    </dependency>
+
+    <!-- TMS common libraries (all services get these) -->
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-events-schema</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-audit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-outbox</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-idempotency</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-money</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-messaging</artifactId>
+    </dependency>
+
+    <!-- Test -->
+    <dependency>
+      <groupId>com.tms</groupId>
+      <artifactId>tms-common-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+</project>
 ```
 
-### Convention Plugins
+### `tms-ui` Module `pom.xml` (Angular via `frontend-maven-plugin`)
 
-**`gradle/conventions/spring-service.gradle.kts`** — applied by every deployable service:
-```kotlin
-plugins {
-    id("java")
-    id("org.springframework.boot")
-    id("io.spring.dependency-management")
-    id("com.google.cloud.tools.jib")
-}
+```xml
+<project>
+  <parent>
+    <groupId>com.tms</groupId>
+    <artifactId>tms-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>tms-ui</artifactId>
+  <packaging>jar</packaging>
 
-java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
-
-dependencies {
-    implementation(project(":tms-common-audit"))
-    implementation(project(":tms-common-outbox"))
-    implementation(project(":tms-common-idempotency"))
-    implementation(project(":tms-common-security"))
-    implementation(project(":tms-common-money"))
-    implementation(project(":tms-common-validation"))
-    implementation(project(":tms-common-messaging"))
-    implementation(project(":tms-events-schema"))
-    testImplementation(project(":tms-common-test"))
-}
-
-jib {
-    from { image = "eclipse-temurin:21-jre-alpine" }
-    to { image = "ghcr.io/org/tms/${project.name}:${project.version}" }
-    container {
-        jvmFlags = listOf("-XX:+UseZGC", "-XX:+ZGenerational")
-        ports = listOf("8080", "8081") // app + management
-    }
-}
-
-tasks.test { useJUnitPlatform() }
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>1.15.0</version>
+        <configuration>
+          <workingDirectory>${project.basedir}</workingDirectory>
+          <nodeVersion>v22.0.0</nodeVersion>
+          <npmVersion>10.5.0</npmVersion>
+        </configuration>
+        <executions>
+          <execution>
+            <id>install-node-and-npm</id>
+            <goals><goal>install-node-and-npm</goal></goals>
+            <phase>initialize</phase>
+          </execution>
+          <execution>
+            <id>npm-install</id>
+            <goals><goal>npm</goal></goals>
+            <phase>initialize</phase>
+            <configuration><arguments>install</arguments></configuration>
+          </execution>
+          <execution>
+            <id>angular-build</id>
+            <goals><goal>npm</goal></goals>
+            <phase>compile</phase>
+            <configuration>
+              <arguments>run build -- --configuration production</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>angular-test</id>
+            <goals><goal>npm</goal></goals>
+            <phase>test</phase>
+            <configuration>
+              <arguments>run test -- --watch=false --browsers=ChromeHeadless</arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Package built Angular dist into a JAR for deployment -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-angular-dist</id>
+            <phase>prepare-package</phase>
+            <goals><goal>copy-resources</goal></goals>
+            <configuration>
+              <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.basedir}/dist/tms-ui/browser</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+</project>
 ```
+
+The built Angular `dist/` is packaged into a JAR and served as static resources by the BFF (`tms-bff`), or deployed to a CDN (recommended for production).
 
 ---
 
 ## `tms-events-schema`
 
-Owns all Avro `.avsc` files and publishes generated Java classes as a JAR.
-
 ```
 tms-events-schema/
-├── build.gradle.kts
+├── pom.xml               (applies avro-maven-plugin)
 └── src/main/avro/
     ├── common/
     │   ├── MonetaryAmount.avsc
@@ -175,20 +449,12 @@ tms-events-schema/
     │   └── LegalEntityContext.avsc
     ├── payment/
     │   ├── PaymentCreated.avsc
-    │   ├── PaymentValidated.avsc
-    │   ├── PaymentReleased.avsc
     │   ├── PaymentSettled.avsc
     │   └── PaymentFailed.avsc
     ├── cash/
-    │   ├── ecf/
-    │   │   ├── ExpectedCashFlowCreated.avsc
-    │   │   ├── ExpectedCashFlowAmended.avsc
-    │   │   └── ExpectedCashFlowSettled.avsc
-    │   ├── bat/
-    │   │   ├── BankStatementReceived.avsc
-    │   │   └── BankTransactionPosted.avsc
-    │   └── position/
-    │       └── CashPositionUpdated.avsc
+    │   ├── ecf/ExpectedCashFlowCreated.avsc
+    │   ├── bat/BankTransactionPosted.avsc
+    │   └── position/CashPositionUpdated.avsc
     ├── trade/
     ├── settlement/
     ├── accounting/
@@ -199,7 +465,7 @@ tms-events-schema/
     └── confirmation/
 ```
 
-**`MonetaryAmount.avsc`** (canonical money type, reused by all schemas):
+**`MonetaryAmount.avsc`:**
 ```json
 {
   "type": "record",
@@ -212,22 +478,7 @@ tms-events-schema/
 }
 ```
 
-**`build.gradle.kts`**:
-```kotlin
-plugins {
-    id("java-library")
-    id("com.github.davidmc24.gradle.plugin.avro") version "1.9.1"
-}
-
-avro { isCreateSetters.set(false) }  // generate immutable records
-
-dependencies {
-    api(libs.avro)
-    api(libs.confluent.avro.serializer)
-}
-```
-
-Schema compatibility rule: ALL schemas registered with `BACKWARD` compatibility in Confluent Schema Registry. CI enforces this via `schema-registry-gradle-plugin` check on every PR.
+Schema compatibility rule: all schemas registered with `BACKWARD` compatibility in Confluent Schema Registry. CI enforces this via a `mvn exec:java` call to the Schema Registry compatibility check API on every PR.
 
 ---
 
@@ -235,14 +486,13 @@ Schema compatibility rule: ALL schemas registered with `BACKWARD` compatibility 
 
 ```java
 // Annotation for automatic audit logging via AOP
-@Target({ElementType.METHOD})
+@Target(ElementType.METHOD)
 @Retention(RetentionPolicy.RUNTIME)
 public @interface Audited {
     String action();
     String entityType();
 }
 
-// AOP aspect (applied via spring-service convention plugin's auto-configuration)
 @Aspect
 @Component
 public class AuditAspect {
@@ -257,22 +507,17 @@ public class AuditAspect {
             .correlationId(MDC.get("correlationId"))
             .changedAt(Instant.now(clock))
             .build();
-        auditPublisher.publish(entry);  // publishes to tms.audit.entries topic
+        auditPublisher.publish(entry);
         return result;
     }
 }
 ```
-
-Audit entries go to Kafka `tms.audit.entries` (keyed by `entityType:entityId`) → OpenSearch index for search.
 
 ---
 
 ## `tms-common-outbox`
 
 ```java
-// Outbox table is per-service (each service has its own outbox in its schema)
-// This library provides the publisher and the Debezium configuration bootstrap
-
 @Service
 public class OutboxEventPublisher {
     private final JdbcTemplate jdbc;
@@ -285,13 +530,11 @@ public class OutboxEventPublisher {
             VALUES (?, ?, ?, ?, ?)
             """,
             aggregateType, aggregateId, eventType, avroPayload, schemaId);
-        // Debezium CDC reads this insert and publishes to Kafka
-        // Never call KafkaTemplate directly — always go through outbox
+        // Debezium CDC reads this insert and publishes to Kafka.
+        // Never call KafkaTemplate directly — always go through outbox.
     }
 }
 ```
-
-DDL is identical per-service; managed by each service's Flyway migrations (not this library). This library ships the `OutboxEventPublisher` bean + the Debezium connector configuration class only.
 
 ---
 
@@ -309,8 +552,7 @@ public class IdempotencyFilter extends OncePerRequestFilter {
         String key = req.getHeader("Idempotency-Key");
         if (key == null) { chain.doFilter(req, res); return; }
 
-        String cacheKey = "idem:" + key;
-        String cached = redis.opsForValue().get(cacheKey);
+        String cached = redis.opsForValue().get("idem:" + key);
         if (cached != null) {
             res.setStatus(HttpServletResponse.SC_OK);
             res.getWriter().write(cached);
@@ -319,22 +561,20 @@ public class IdempotencyFilter extends OncePerRequestFilter {
 
         ContentCachingResponseWrapper wrapped = new ContentCachingResponseWrapper(res);
         chain.doFilter(req, wrapped);
-        redis.opsForValue().set(cacheKey, new String(wrapped.getContentAsByteArray()),
-            Duration.ofHours(24));
+        redis.opsForValue().set("idem:" + key,
+            new String(wrapped.getContentAsByteArray()), Duration.ofHours(24));
         wrapped.copyBodyToResponse();
     }
 }
 
-// Consumer-side idempotency (Kafka listener decorator)
 public abstract class IdempotentKafkaListener<T> {
     private final StringRedisTemplate redis;
 
     protected abstract void processOnce(T message, String messageId);
 
-    @SuppressWarnings("unused")
     public void onMessage(T message, @Header(KafkaHeaders.RECEIVED_KEY) String messageId) {
-        String key = "kafka-idem:" + messageId;
-        Boolean isNew = redis.opsForValue().setIfAbsent(key, "1", Duration.ofDays(7));
+        Boolean isNew = redis.opsForValue()
+            .setIfAbsent("kafka-idem:" + messageId, "1", Duration.ofDays(7));
         if (Boolean.TRUE.equals(isNew)) processOnce(message, messageId);
     }
 }
@@ -345,13 +585,12 @@ public abstract class IdempotentKafkaListener<T> {
 ## `tms-common-security`
 
 ```java
-// Extracts typed principal from JWT — used in all services
 public record TmsPrincipal(
     String userId,
     String username,
     String email,
     List<String> roles,
-    String legalEntityId   // from "entity" custom claim set by Keycloak mapper
+    String legalEntityId
 ) {}
 
 @Component
@@ -363,17 +602,9 @@ public class TmsPrincipalExtractor {
             jwt.getClaimAsString("preferred_username"),
             jwt.getClaimAsString("email"),
             jwt.getClaimAsStringList("roles"),
-            jwt.getClaimAsString("entity")
+            jwt.getClaimAsString("legal_entity_id")
         );
     }
-}
-
-// Convenience annotation
-@Target(ElementType.METHOD)
-@Retention(RetentionPolicy.RUNTIME)
-@PreAuthorize("hasRole(#role)")
-public @interface RequiresRole {
-    String value();
 }
 ```
 
@@ -382,7 +613,6 @@ public @interface RequiresRole {
 ## `tms-common-money`
 
 ```java
-// Canonical money operations — wraps JSR-354 Moneta
 public final class Money {
     private Money() {}
 
@@ -393,62 +623,16 @@ public final class Money {
             .create();
     }
 
-    public static MonetaryAmount of(BigDecimal amount, String currency) {
-        return Monetary.getDefaultAmountFactory()
-            .setCurrency(currency)
-            .setNumber(amount)
-            .create();
-    }
-
-    public static BigDecimal toBigDecimal(MonetaryAmount m) {
-        return m.getNumber().numberValueExact(BigDecimal.class);
-    }
-
     public static String toApiString(MonetaryAmount m) {
-        return toBigDecimal(m).toPlainString();
+        return m.getNumber().numberValueExact(BigDecimal.class).toPlainString();
     }
 }
 
-// Jackson module: serialize MonetaryAmount as { "amount": "123.45", "currency": "EUR" }
+// Jackson module — auto-configured by tms-common-money Spring Boot auto-configuration
 public class MonetaryAmountModule extends SimpleModule {
     public MonetaryAmountModule() {
         addSerializer(MonetaryAmount.class, new MonetaryAmountSerializer());
         addDeserializer(MonetaryAmount.class, new MonetaryAmountDeserializer());
-    }
-}
-```
-
-This module is auto-configured via Spring Boot auto-configuration in `tms-common-money`. All services pick it up automatically.
-
----
-
-## `tms-common-messaging`
-
-```java
-// Typed Kafka publisher: handles serialization, correlation ID propagation
-@Component
-public class TmsKafkaPublisher {
-    private final KafkaTemplate<String, Object> kafkaTemplate;
-
-    public <T> void publish(String topic, String key, T payload) {
-        ProducerRecord<String, Object> record = new ProducerRecord<>(topic, key, payload);
-        record.headers().add("correlationId",
-            MDC.get("correlationId").getBytes(StandardCharsets.UTF_8));
-        kafkaTemplate.send(record);
-    }
-}
-
-// RabbitMQ command publisher with reply correlation
-@Component
-public class TmsRabbitPublisher {
-    private final RabbitTemplate rabbitTemplate;
-
-    public void publishCommand(String exchange, String routingKey, Object command) {
-        rabbitTemplate.convertAndSend(exchange, routingKey, command, msg -> {
-            msg.getMessageProperties().setCorrelationId(MDC.get("correlationId"));
-            msg.getMessageProperties().setMessageId(UUID.randomUUID().toString());
-            return msg;
-        });
     }
 }
 ```
@@ -458,29 +642,26 @@ public class TmsRabbitPublisher {
 ## `tms-common-test`
 
 ```java
-// Base class for all integration tests
 @SpringBootTest
 @Testcontainers
 @ActiveProfiles("test")
 public abstract class TmsIntegrationTest {
 
     @Container
-    static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:17")
-        .withDatabaseName("tms_test")
-        .withUsername("tms")
-        .withPassword("tms");
+    static final PostgreSQLContainer<?> postgres =
+        new PostgreSQLContainer<>("postgres:17").withDatabaseName("tms_test");
 
     @Container
-    static final KafkaContainer kafka = new KafkaContainer(
-        DockerImageName.parse("confluentinc/cp-kafka:7.8.0"));
+    static final KafkaContainer kafka =
+        new KafkaContainer(DockerImageName.parse("confluentinc/cp-kafka:7.8.0"));
 
     @Container
-    static final RabbitMQContainer rabbit = new RabbitMQContainer(
-        DockerImageName.parse("rabbitmq:3.13-management"));
+    static final RabbitMQContainer rabbit =
+        new RabbitMQContainer(DockerImageName.parse("rabbitmq:3.13-management"));
 
     @Container
-    static final GenericContainer<?> redis = new GenericContainer<>(
-        DockerImageName.parse("redis:7-alpine")).withExposedPorts(6379);
+    static final GenericContainer<?> redis =
+        new GenericContainer<>(DockerImageName.parse("redis:7-alpine")).withExposedPorts(6379);
 
     @DynamicPropertySource
     static void configureProperties(DynamicPropertyRegistry registry) {
@@ -495,7 +676,6 @@ public abstract class TmsIntegrationTest {
     }
 }
 
-// Fixed clock for deterministic date tests
 @TestConfiguration
 public class TestClockConfig {
     @Bean
@@ -508,7 +688,6 @@ public class TestClockConfig {
     }
 }
 
-// Money assertion helpers
 public final class MoneyAssertions {
     public static void assertAmount(MonetaryAmount actual, String expectedAmount, String currency) {
         assertThat(Money.toApiString(actual)).isEqualTo(expectedAmount);
@@ -522,7 +701,7 @@ public final class MoneyAssertions {
 ## CI Pipeline — GitHub Actions
 
 ```yaml
-# .github/workflows/ci.yml (excerpt)
+# .github/workflows/ci.yml
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -530,53 +709,47 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with: { java-version: '21', distribution: 'temurin' }
-      - uses: gradle/gradle-build-action@v3
 
-      - name: Build all modules
-        run: ./gradlew build -x test --parallel
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
-      - name: Unit tests (all modules)
-        run: ./gradlew test --parallel
+      - name: Build all modules (skip tests)
+        run: mvn install -DskipTests --threads 4
 
-      - name: Integration tests (requires Docker)
-        run: ./gradlew integrationTest
+      - name: Unit tests
+        run: mvn test --threads 4
+
+      - name: Integration tests
+        run: mvn verify -P integration-test
 
       - name: Avro schema compatibility check
-        run: ./gradlew checkSchemaCompatibility
-        # Fails if any schema change breaks BACKWARD compatibility
+        run: mvn exec:java -pl tms-events-schema -Dexec.mainClass=com.tms.schema.CompatibilityCheck
 
       - name: Spring Cloud Contract verification
-        run: ./gradlew contractTest
+        run: mvn spring-cloud-contract:generateStubs spring-cloud-contract:generateTests verify -pl tms-payment-hub
 
-      - name: SonarQube quality gate
-        run: ./gradlew sonar
-        # Fails on: double/float for amounts, LocalDate.now(), cross-service DB queries
+      - name: SonarQube analysis
+        run: mvn sonar:sonar -Dsonar.projectKey=tms
 
   publish-images:
     needs: build-and-test
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Publish all service images
-        run: ./gradlew jib --parallel
-        # Jib builds and pushes without Docker daemon
+      - name: Publish all service images via Jib
+        run: mvn jib:build --threads 4 -DskipTests
+        # Jib builds and pushes without a Docker daemon
 ```
 
 ---
 
-## Dependency Rules (enforced by ArchUnit)
+## Dependency Rules (ArchUnit — in `tms-common-test`, runs in every service)
 
 ```java
-// tms-common-test ArchUnit enforcement (runs in each service's test suite)
 @AnalyzeClasses(packages = "com.tms")
 public class DependencyRulesTest {
-
-    @ArchTest
-    static final ArchRule noServiceToServiceDbAccess =
-        noClasses().that().resideInAPackage("com.tms..*")
-            .should().dependOnClassesThat()
-            .resideInAPackage("com.tms..*.repository..")
-            .andShould().haveSimpleNameNotContaining("Own");
-    // Each service may only import its own repository interfaces.
 
     @ArchTest
     static final ArchRule noDoubleOrFloatForMoney =
@@ -590,7 +763,13 @@ public class DependencyRulesTest {
     @ArchTest
     static final ArchRule noDirectLocalDateNow =
         noClasses().should().callMethod(LocalDate.class, "now");
-    // Must inject Clock and call LocalDate.now(clock) instead.
+
+    @ArchTest
+    static final ArchRule noServiceToServiceDbAccess =
+        noClasses().that().resideInAPackage("com.tms..*")
+            .should().dependOnClassesThat()
+            .resideInAPackage("com.tms..*.repository..")
+            .andShould().haveSimpleNameNotContaining("Own");
 }
 ```
 
@@ -604,21 +783,29 @@ docker compose -f docker-compose.infra.yml up -d
 ```
 
 **`docker-compose.infra.yml` services:**
+
 | Service | Port | Notes |
 |---------|------|-------|
-| PostgreSQL 17 | 5432 | Single instance; per-service schemas created by Flyway |
-| Kafka + KRaft | 9092, 9093 | No ZooKeeper; Schema Registry on 8081 |
+| PostgreSQL 17 | 5432 | Single instance; per-service schemas created by Flyway on startup |
+| Kafka + KRaft | 9092 | No ZooKeeper; Schema Registry on 8081 |
 | RabbitMQ 3.13 | 5672, 15672 | Management UI; x-delayed-message plugin enabled |
 | Redis 7 | 6379 | Single node for dev |
-| Keycloak 25 | 8080 | Dev realm pre-configured with test users |
+| Keycloak 25 | 8080 | Dev realm pre-configured with test users and roles |
 | MinIO | 9000, 9001 | S3-compatible; Console on 9001 |
 | OpenSearch 2 | 9200 | Single node for dev |
-| Mailpit | 8025, 1025 | SMTP catch-all for notification emails |
+| Mailpit | 8025, 1025 | SMTP catch-all for notification email testing |
 | WireMock | 8090 | External service stubs (SWIFT bureau, sanctions screening) |
 
 **Run a single service:**
 ```bash
-./gradlew :tms-payment-hub:bootRun --args='--spring.profiles.active=local'
+mvn -pl tms-payment-hub spring-boot:run -Dspring-boot.run.profiles=local
 ```
 
-Spring `local` profile overrides: connects to Docker Compose infrastructure, disables Vault Agent (uses plaintext secrets), enables H2 console, enables `/actuator` without auth.
+**Run Angular UI in dev mode:**
+```bash
+cd tms-ui
+npm install
+npm start         # ng serve — proxies API calls to local BFF at :8095
+```
+
+Spring `local` profile: connects to Docker Compose infrastructure, disables Vault Agent, enables H2 console, enables `/actuator` without auth.
